[package]
name = "fluo"
version = "0.0.1"
authors = ["Monlih <MonliH@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
shellexpand = "1.1.1"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }

[[bench]]
name = "parser_bench"
harness = false

