[package]
name = "fluoc"
version = "0.0.1"
description = "The compiler for the fluo programming language"
authors = ["Monlih <MonliH@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
shellexpand = "1.1.1"
lazy_static = "1.4.0"
unicode-segmentation = "1.6.0"
codespan-reporting = "0.9.5"
smallvec = "1.4.2"
either = "1.6.1"
derivative = "2.1.1"
rand = "0.7"

[build-dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
